tests/paczka2/big_fuzzy/27689911.err
Error in line 4: 9orqukX4iT A536 60,8
Error in line 2: E1A A570 57,0
Error in line 6: 9orqukX4iT A124 8,1
Error in line 11: wAzsLMeG07 A536 98,8
Error in line 9: 9orqukX4iT A570 33,3
Error in line 22: A536 A570 83,2
Error in line 26: To1HYenS A570 76,3
Error in line 28: To1HYenS A124 24,5
Error in line 33: gwXbiSK A124 6,2
Error in line 31: CEygeX50i A536 59,0
Error in line 43: E1A A124 79,0
Error in line 51: CEygeX50i A227 86,1
Error in line 44: 9orqukX4iT A570 42,0
Error in line 68: E1A A227 39,54
Error in line 71: 9orqukX4iT A227 14,8
Error in line 76: wAzsLMeG07 A536 96,8
Error in line 90: CEygeX50i A227 9,88
Error in line 92: gwXbiSK A536 -1,1
Error in line 98: To1HYenS A227 72,7
Error in line 84: E1A A227 39,4
Error in line 106: CEygeX50i A5P6 8,8
Error in line 108: gwXbiSK AR24 32,R
Error in line 94: wAzsLMeG07 A227 224,8
Error in line 91: CEygeX50i A227 37,7
Error in line 88: gwXbiSK A536 21,6
Error in line 114: gwXbiSK A124 60,7
Error in line 103: E1A A570 34,7
Error in line 118: E1A A536 44,0
Error in line 145: wAzsLMeG07 A570 25,7
Error in line 136: A536 A124 167,7
Error in line 153: gwXbiSK A124 12,8
Error in line 161: gwXbiSK A]36 209,0
Error in line 155: A536 A570 61,8
Error in line 163: A536 A124 24,2
Error in line 164: gwXbiSK A227 50,9
Error in line 166: E1A A570 88,5
Error in line 167: A536 A536 54,9
Error in line 173: A536 A570 48,2
Error in line 180: E1A A536 30,9
Error in line 191: E1A A124 76,0
Error in line 197: E1A A570 88,1
Error in line 201: 9orqukX4iT A227 81,0
Error in line 208: To1HYenS A536 35,1
Error in line 209: 9orqukX4iT A124 38,7
Error in line 220: A536 A227 69,9
Error in line 229: 9orqukX4iT A570 168,0
Error in line 232: 9orqukX4iT A536 21,9
Error in line 238: 9orqukX4iT A227 40,1
Error in line 224: A536 A536 57,2
Error in line 246: 9orqukX4iT A124 18,0
Error in line 244: To1HYenS A124 42,4
